--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Мой первый сайт</title>
     <link rel="shortkut icon" href="image/x-icon" href="favicon.ico ">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="/css/style.css">
   </head>
 
